yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techtrends-deployment
  namespace: techtrends
  labels:
    app: techtrends
spec:
  replicas: 4
  selector:
    matchLabels:
      app: techtrends
  template:
    metadata:
      labels:
        app: techtrends
    spec:
      containers:
      - name: techtrends
        image: hosamelbasiony/techtrends-udacity-k8s:v1.0.0
        ports:
        - containerPort: 80
