yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techtrends
  namespace: techtrends
  labels:
    app: techtrends
spec:
  ports:
  - port: 5000
    name: techtrends
    targetPort: 5000
  type: ClusterIP
  selector:
    app: techtrends
